@@ -26,7 +26,8 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
-import java.net.URLEncoder;
+import java.lang.reflect.InvocationTargetException;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -41,11 +42,6 @@ import java.util.stream.Collectors;
 
 import com.cloud.storage.Storage;
 import com.cloud.utils.exception.CloudRuntimeException;
-import com.vmware.vim25.InvalidStateFaultMsg;
-import com.vmware.vim25.RuntimeFaultFaultMsg;
-import com.vmware.vim25.TaskInfo;
-import com.vmware.vim25.TaskInfoState;
-import com.vmware.vim25.VirtualMachineTicket;
 import org.apache.cloudstack.utils.reflectiontostringbuilderutils.ReflectionToStringBuilderUtils;
 import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -54,12 +50,13 @@ import com.cloud.hypervisor.vmware.mo.SnapshotDescriptor.SnapshotInfo;
 import com.cloud.hypervisor.vmware.util.VmwareContext;
 import com.cloud.hypervisor.vmware.util.VmwareHelper;
 import com.cloud.utils.ActionDelegate;
-import com.cloud.utils.LogUtils;
 import com.cloud.utils.Pair;
 import com.cloud.utils.Ternary;
 import com.cloud.utils.concurrency.NamedThreadFactory;
 import com.cloud.utils.script.Script;
+
 import com.google.gson.Gson;
+
 import com.vmware.vim25.ArrayOfManagedObjectReference;
 import com.vmware.vim25.ChoiceOption;
 import com.vmware.vim25.CustomFieldStringValue;
@@ -71,6 +68,8 @@ import com.vmware.vim25.GuestOsDescriptor;
 import com.vmware.vim25.HttpNfcLeaseDeviceUrl;
 import com.vmware.vim25.HttpNfcLeaseInfo;
 import com.vmware.vim25.HttpNfcLeaseState;
+import com.vmware.vim25.InvalidPropertyFaultMsg;
+import com.vmware.vim25.InvalidStateFaultMsg;
 import com.vmware.vim25.ManagedObjectReference;
 import com.vmware.vim25.ObjectContent;
 import com.vmware.vim25.ObjectSpec;
@@ -81,12 +80,14 @@ import com.vmware.vim25.OvfFile;
 import com.vmware.vim25.ParaVirtualSCSIController;
 import com.vmware.vim25.PropertyFilterSpec;
 import com.vmware.vim25.PropertySpec;
+import com.vmware.vim25.RuntimeFaultFaultMsg;
+import com.vmware.vim25.TaskInfo;
+import com.vmware.vim25.TaskInfoState;
 import com.vmware.vim25.TraversalSpec;
 import com.vmware.vim25.VirtualBusLogicController;
 import com.vmware.vim25.VirtualCdrom;
 import com.vmware.vim25.VirtualCdromIsoBackingInfo;
 import com.vmware.vim25.VirtualCdromRemotePassthroughBackingInfo;
-import com.vmware.vim25.VirtualController;
 import com.vmware.vim25.VirtualDevice;
 import com.vmware.vim25.VirtualDeviceBackingInfo;
 import com.vmware.vim25.VirtualDeviceConfigSpec;
@@ -125,6 +126,7 @@ import com.vmware.vim25.VirtualMachineRelocateSpecDiskLocator;
 import com.vmware.vim25.VirtualMachineRuntimeInfo;
 import com.vmware.vim25.VirtualMachineSnapshotInfo;
 import com.vmware.vim25.VirtualMachineSnapshotTree;
+import com.vmware.vim25.VirtualMachineTicket;
 import com.vmware.vim25.VirtualSCSIController;
 import com.vmware.vim25.VirtualSCSISharing;
 
@@ -158,54 +160,17 @@ public class VirtualMachineMO extends BaseMO {
         return DatacenterMO.getOwnerDatacenter(getContext(), getMor());
     }
 
-    public Pair<DatastoreMO, String> getOwnerDatastore(String dsFullPath) throws Exception {
-        String dsName = DatastoreFile.getDatastoreNameFromPath(dsFullPath);
-
-        PropertySpec pSpec = new PropertySpec();
-        pSpec.setType("Datastore");
-        pSpec.getPathSet().add("name");
-
-        TraversalSpec vmDatastoreTraversal = new TraversalSpec();
-        vmDatastoreTraversal.setType("VirtualMachine");
-        vmDatastoreTraversal.setPath("datastore");
-        vmDatastoreTraversal.setName("vmDatastoreTraversal");
-
-        ObjectSpec oSpec = new ObjectSpec();
-        oSpec.setObj(_mor);
-        oSpec.setSkip(Boolean.TRUE);
-        oSpec.getSelectSet().add(vmDatastoreTraversal);
-
-        PropertyFilterSpec pfSpec = new PropertyFilterSpec();
-        pfSpec.getPropSet().add(pSpec);
-        pfSpec.getObjectSet().add(oSpec);
-        List<PropertyFilterSpec> pfSpecArr = new ArrayList<PropertyFilterSpec>();
-        pfSpecArr.add(pfSpec);
-
-        List<ObjectContent> ocs = _context.getService().retrieveProperties(_context.getPropertyCollector(), pfSpecArr);
-
-        if (ocs != null) {
-            for (ObjectContent oc : ocs) {
-                DynamicProperty prop = oc.getPropSet().get(0);
-                if (prop.getVal().toString().equals(dsName)) {
-                    return new Pair<DatastoreMO, String>(new DatastoreMO(_context, oc.getObj()), dsName);
-                }
-            }
-        }
-
-        return null;
-    }
-
     public HostMO getRunningHost() throws Exception {
         VirtualMachineRuntimeInfo runtimeInfo = getRuntimeInfo();
         return new HostMO(_context, runtimeInfo.getHost());
     }
 
-    public String getVmName() throws Exception {
-        return (String)getContext().getVimClient().getDynamicProperty(_mor, "name");
+    public String getVmName() throws InvalidPropertyFaultMsg, RuntimeFaultFaultMsg, InvocationTargetException, NoSuchMethodException, IllegalAccessException {
+        return getContext().getVimClient().getDynamicProperty(_mor, "name");
     }
 
     public GuestInfo getVmGuestInfo() throws Exception {
-        return (GuestInfo)getContext().getVimClient().getDynamicProperty(_mor, "guest");
+        return getContext().getVimClient().getDynamicProperty(_mor, "guest");
     }
 
     public void answerVM(String questionId, String choice) throws Exception {
@@ -214,11 +179,7 @@ public class VirtualMachineMO extends BaseMO {
 
     public boolean isVMwareToolsRunning() throws Exception {
         GuestInfo guestInfo = getVmGuestInfo();
-        if (guestInfo != null) {
-            if ("guestToolsRunning".equalsIgnoreCase(guestInfo.getToolsRunningStatus()))
-                return true;
-        }
-        return false;
+        return guestInfo != null && "guestToolsRunning".equalsIgnoreCase(guestInfo.getToolsRunningStatus());
     }
 
     public boolean powerOn() throws Exception {
@@ -387,7 +348,7 @@ public class VirtualMachineMO extends BaseMO {
         // In the future, VMsync should not kick off CloudStack action (this is not a HA case) based on VM
         // state report, until then we can remove this hacking fix
         for (int i = 0; i < 3; i++) {
-            powerState = (VirtualMachinePowerState)getContext().getVimClient().getDynamicProperty(_mor, "runtime.powerState");
+            powerState = getContext().getVimClient().getDynamicProperty(_mor, "runtime.powerState");
             if (powerState == VirtualMachinePowerState.POWERED_OFF) {
                 try {
                     Thread.sleep(1000);
@@ -403,7 +364,7 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public VirtualMachinePowerState getPowerState() throws Exception {
-        return (VirtualMachinePowerState)getContext().getVimClient().getDynamicProperty(_mor, "runtime.powerState");
+        return getContext().getVimClient().getDynamicProperty(_mor, "runtime.powerState");
     }
 
     public boolean reset() throws Exception {
@@ -466,39 +427,6 @@ public class VirtualMachineMO extends BaseMO {
         return false;
     }
 
-    public boolean changeHost(VirtualMachineRelocateSpec relocateSpec) throws Exception {
-        ManagedObjectReference morTask = _context.getService().relocateVMTask(_mor, relocateSpec, VirtualMachineMovePriority.DEFAULT_PRIORITY);
-        boolean result = _context.getVimClient().waitForTask(morTask);
-        if (result) {
-            _context.waitForTaskProgressDone(morTask);
-            return true;
-        } else {
-            logger.error("VMware RelocateVM_Task to change host failed due to " + TaskMO.getTaskFailureInfo(_context, morTask));
-        }
-        return false;
-    }
-
-    public boolean changeDatastore(ManagedObjectReference morDataStore, VmwareHypervisorHost targetHost) throws Exception {
-        VirtualMachineRelocateSpec relocateSpec = new VirtualMachineRelocateSpec();
-        relocateSpec.setDatastore(morDataStore);
-        if (targetHost != null) {
-            relocateSpec.setHost(targetHost.getMor());
-            relocateSpec.setPool(targetHost.getHyperHostOwnerResourcePool());
-        }
-
-        ManagedObjectReference morTask = _context.getService().relocateVMTask(_mor, relocateSpec, null);
-
-        boolean result = _context.getVimClient().waitForTask(morTask);
-        if (result) {
-            _context.waitForTaskProgressDone(morTask);
-            return true;
-        } else {
-            logger.error("VMware change datastore relocateVM_Task failed due to " + TaskMO.getTaskFailureInfo(_context, morTask));
-        }
-
-        return false;
-    }
-
     public boolean relocate(ManagedObjectReference morTargetHost) throws Exception {
         VirtualMachineRelocateSpec relocateSpec = new VirtualMachineRelocateSpec();
         relocateSpec.setHost(morTargetHost);
@@ -517,7 +445,7 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public VirtualMachineSnapshotInfo getSnapshotInfo() throws Exception {
-        return (VirtualMachineSnapshotInfo)_context.getVimClient().getDynamicProperty(_mor, "snapshot");
+        return _context.getVimClient().getDynamicProperty(_mor, "snapshot");
     }
 
     public boolean createSnapshot(String snapshotName, String snapshotDescription, boolean dumpMemory, boolean quiesce) throws Exception {
@@ -585,39 +513,6 @@ public class VirtualMachineMO extends BaseMO {
         }
 
         return false;
-    }
-
-    public boolean revertToSnapshot(String snapshotName) throws Exception {
-        ManagedObjectReference morSnapshot = getSnapshotMor(snapshotName);
-        if (morSnapshot == null) {
-            logger.warn("Unable to find snapshot: " + snapshotName);
-            return false;
-        }
-        ManagedObjectReference morTask = _context.getService().revertToSnapshotTask(morSnapshot, _mor, null);
-        boolean result = _context.getVimClient().waitForTask(morTask);
-        if (result) {
-            _context.waitForTaskProgressDone(morTask);
-            return true;
-        } else {
-            logger.error("VMware revert to snapshot failed due to " + TaskMO.getTaskFailureInfo(_context, morTask));
-        }
-
-        return false;
-    }
-
-    /**
-     * Deletes all of the snapshots of a VM.
-     */
-    public void consolidateAllSnapshots() throws Exception {
-        ManagedObjectReference task = _context.getService().removeAllSnapshotsTask(_mor, true);
-
-        boolean result = _context.getVimClient().waitForTask(task);
-
-        if (result) {
-            _context.waitForTaskProgressDone(task);
-        } else {
-            throw new Exception("Unable to register VM due to the following issue: " + TaskMO.getTaskFailureInfo(_context, task));
-        }
     }
 
     public boolean removeAllSnapshots() throws Exception {
@@ -699,7 +594,7 @@ public class VirtualMachineMO extends BaseMO {
         PropertyFilterSpec pfSpec = new PropertyFilterSpec();
         pfSpec.getPropSet().add(pSpec);
         pfSpec.getObjectSet().add(oSpec);
-        List<PropertyFilterSpec> pfSpecArr = new ArrayList<PropertyFilterSpec>();
+        List<PropertyFilterSpec> pfSpecArr = new ArrayList<>();
         pfSpecArr.add(pfSpec);
 
         List<ObjectContent> ocs = _context.getService().retrieveProperties(_context.getPropertyCollector(), pfSpecArr);
@@ -748,9 +643,7 @@ public class VirtualMachineMO extends BaseMO {
                 return true;
             }
             List<VirtualMachineSnapshotTree> rootSnapshotList = info.getRootSnapshotList();
-            if (rootSnapshotList != null && rootSnapshotList.size() > 0) {
-                return true;
-            }
+            return CollectionUtils.isNotEmpty(rootSnapshotList);
         }
         return false;
     }
@@ -903,11 +796,11 @@ public class VirtualMachineMO extends BaseMO {
         VirtualDisk[] independentDisks = getAllIndependentDiskDevice();
         VirtualMachineRelocateSpec rSpec = new VirtualMachineRelocateSpec();
         if (independentDisks.length > 0) {
-            List<VirtualMachineRelocateSpecDiskLocator> diskLocator = new ArrayList<VirtualMachineRelocateSpecDiskLocator>(independentDisks.length);
-            for (int i = 0; i < independentDisks.length; i++) {
+            List<VirtualMachineRelocateSpecDiskLocator> diskLocator = new ArrayList<>(independentDisks.length);
+            for (VirtualDisk independentDisk : independentDisks) {
                 VirtualMachineRelocateSpecDiskLocator loc = new VirtualMachineRelocateSpecDiskLocator();
                 loc.setDatastore(morDs);
-                loc.setDiskId(independentDisks[i].getKey());
+                loc.setDiskId(independentDisk.getKey());
                 loc.setDiskMoveType(VirtualMachineRelocateDiskMoveOptions.MOVE_ALL_DISK_BACKINGS_AND_DISALLOW_SHARING.value());
                 diskLocator.add(loc);
             }
@@ -939,26 +832,26 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public VirtualMachineRuntimeInfo getRuntimeInfo() throws Exception {
-        return (VirtualMachineRuntimeInfo)_context.getVimClient().getDynamicProperty(_mor, "runtime");
+        return _context.getVimClient().getDynamicProperty(_mor, "runtime");
     }
 
     public VirtualMachineConfigInfo getConfigInfo() throws Exception {
-        return (VirtualMachineConfigInfo)_context.getVimClient().getDynamicProperty(_mor, "config");
+        return _context.getVimClient().getDynamicProperty(_mor, "config");
     }
 
     public boolean isToolsInstallerMounted() throws Exception {
         return _context.getVimClient().getDynamicProperty(_mor, "runtime.toolsInstallerMounted");
     }
     public GuestInfo getGuestInfo() throws Exception {
-        return (GuestInfo)_context.getVimClient().getDynamicProperty(_mor, "guest");
+        return _context.getVimClient().getDynamicProperty(_mor, "guest");
     }
 
     public VirtualMachineConfigSummary getConfigSummary() throws Exception {
-        return (VirtualMachineConfigSummary)_context.getVimClient().getDynamicProperty(_mor, "summary.config");
+        return _context.getVimClient().getDynamicProperty(_mor, "summary.config");
     }
 
     public VirtualMachineFileInfo getFileInfo() throws Exception {
-        return (VirtualMachineFileInfo)_context.getVimClient().getDynamicProperty(_mor, "config.files");
+        return _context.getVimClient().getDynamicProperty(_mor, "config.files");
     }
 
     public VirtualMachineFileLayoutEx getFileLayout() throws Exception {
@@ -974,7 +867,7 @@ public class VirtualMachineMO extends BaseMO {
         PropertyFilterSpec pfSpec = new PropertyFilterSpec();
         pfSpec.getPropSet().add(pSpec);
         pfSpec.getObjectSet().add(oSpec);
-        List<PropertyFilterSpec> pfSpecArr = new ArrayList<PropertyFilterSpec>();
+        List<PropertyFilterSpec> pfSpecArr = new ArrayList<>();
         pfSpecArr.add(pfSpec);
 
         List<ObjectContent> ocs = _context.getService().retrieveProperties(_context.getPropertyCollector(), pfSpecArr);
@@ -996,11 +889,6 @@ public class VirtualMachineMO extends BaseMO {
         return fileLayout;
     }
 
-    @Override
-    public ManagedObjectReference getParentMor() throws Exception {
-        return (ManagedObjectReference)_context.getVimClient().getDynamicProperty(_mor, "parent");
-    }
-
     public String[] getNetworks() throws Exception {
         PropertySpec pSpec = new PropertySpec();
         pSpec.setType("Network");
@@ -1019,13 +907,13 @@ public class VirtualMachineMO extends BaseMO {
         PropertyFilterSpec pfSpec = new PropertyFilterSpec();
         pfSpec.getPropSet().add(pSpec);
         pfSpec.getObjectSet().add(oSpec);
-        List<PropertyFilterSpec> pfSpecArr = new ArrayList<PropertyFilterSpec>();
+        List<PropertyFilterSpec> pfSpecArr = new ArrayList<>();
         pfSpecArr.add(pfSpec);
 
         List<ObjectContent> ocs = _context.getService().retrieveProperties(_context.getPropertyCollector(), pfSpecArr);
 
-        List<String> networks = new ArrayList<String>();
-        if (ocs != null && ocs.size() > 0) {
+        List<String> networks = new ArrayList<>();
+        if (CollectionUtils.isNotEmpty(ocs)) {
             for (ObjectContent oc : ocs) {
                 networks.add(oc.getPropSet().get(0).getVal().toString());
             }
@@ -1034,7 +922,7 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public List<NetworkDetails> getNetworksWithDetails() throws Exception {
-        List<NetworkDetails> networks = new ArrayList<NetworkDetails>();
+        List<NetworkDetails> networks = new ArrayList<>();
 
         int gcTagKey = getCustomFieldKey("Network", CustomFieldConstants.CLOUD_GC);
 
@@ -1062,12 +950,12 @@ public class VirtualMachineMO extends BaseMO {
         PropertyFilterSpec pfSpec = new PropertyFilterSpec();
         pfSpec.getPropSet().add(pSpec);
         pfSpec.getObjectSet().add(oSpec);
-        List<PropertyFilterSpec> pfSpecArr = new ArrayList<PropertyFilterSpec>();
+        List<PropertyFilterSpec> pfSpecArr = new ArrayList<>();
         pfSpecArr.add(pfSpec);
 
         List<ObjectContent> ocs = _context.getService().retrieveProperties(_context.getPropertyCollector(), pfSpecArr);
 
-        if (ocs != null && ocs.size() > 0) {
+        if (CollectionUtils.isNotEmpty(ocs)) {
             for (ObjectContent oc : ocs) {
                 ArrayOfManagedObjectReference morVms = null;
                 String gcTagValue = null;
@@ -1115,73 +1003,18 @@ public class VirtualMachineMO extends BaseMO {
         PropertyFilterSpec pfSpec = new PropertyFilterSpec();
         pfSpec.getPropSet().add(pSpec);
         pfSpec.getObjectSet().add(oSpec);
-        List<PropertyFilterSpec> pfSpecArr = new ArrayList<PropertyFilterSpec>();
+        List<PropertyFilterSpec> pfSpecArr = new ArrayList<>();
         pfSpecArr.add(pfSpec);
 
         List<ObjectContent> ocs = _context.getService().retrieveProperties(_context.getPropertyCollector(), pfSpecArr);
 
-        List<DatastoreMO> datastores = new ArrayList<DatastoreMO>();
+        List<DatastoreMO> datastores = new ArrayList<>();
         if (CollectionUtils.isNotEmpty(ocs)) {
             for (ObjectContent oc : ocs) {
                 datastores.add(new DatastoreMO(_context, oc.getObj()));
             }
         }
         return datastores;
-    }
-
-    /**
-     * Retrieve path info to access VM files via vSphere web interface
-     * @return [0] vm-name, [1] data-center-name, [2] datastore-name
-     * @throws Exception
-     */
-    public String[] getHttpAccessPathInfo() throws Exception {
-        String[] pathInfo = new String[3];
-
-        Pair<DatacenterMO, String> dcInfo = getOwnerDatacenter();
-
-        VirtualMachineFileInfo fileInfo = getFileInfo();
-        String vmxFilePath = fileInfo.getVmPathName();
-        String vmxPathTokens[] = vmxFilePath.split("\\[|\\]|/");
-        assert (vmxPathTokens.length == 4);
-        pathInfo[1] = vmxPathTokens[1].trim();                            // vSphere vm name
-        pathInfo[2] = dcInfo.second();                                    // vSphere datacenter name
-        pathInfo[3] = vmxPathTokens[0].trim();                            // vSphere datastore name
-        return pathInfo;
-    }
-
-    public String getVmxHttpAccessUrl() throws Exception {
-        Pair<DatacenterMO, String> dcInfo = getOwnerDatacenter();
-
-        VirtualMachineFileInfo fileInfo = getFileInfo();
-        String vmxFilePath = fileInfo.getVmPathName();
-        String vmxPathTokens[] = vmxFilePath.split("\\[|\\]|/");
-
-        StringBuffer sb = new StringBuffer("https://" + _context.getServerAddress() + "/folder/");
-        sb.append(URLEncoder.encode(vmxPathTokens[2].trim(), "UTF-8"));
-        sb.append("/");
-        sb.append(URLEncoder.encode(vmxPathTokens[3].trim(), "UTF-8"));
-        sb.append("?dcPath=");
-        sb.append(URLEncoder.encode(dcInfo.second(), "UTF-8"));
-        sb.append("&dsName=");
-        sb.append(URLEncoder.encode(vmxPathTokens[1].trim(), "UTF-8"));
-
-        return sb.toString();
-    }
-
-    public boolean setVncConfigInfo(boolean enableVnc, String vncPassword, int vncPort, String keyboard) throws Exception {
-        VirtualMachineConfigSpec vmConfigSpec = new VirtualMachineConfigSpec();
-        OptionValue[] vncOptions = VmwareHelper.composeVncOptions(null, enableVnc, vncPassword, vncPort, keyboard);
-        vmConfigSpec.getExtraConfig().addAll(Arrays.asList(vncOptions));
-        ManagedObjectReference morTask = _context.getService().reconfigVMTask(_mor, vmConfigSpec);
-
-        boolean result = _context.getVimClient().waitForTask(morTask);
-        if (result) {
-            _context.waitForTaskProgressDone(morTask);
-            return true;
-        } else {
-            logger.error("VMware reconfigVM_Task failed due to " + TaskMO.getTaskFailureInfo(_context, morTask));
-        }
-        return false;
     }
 
     public boolean configureVm(VirtualMachineConfigSpec vmConfigSpec) throws Exception {
@@ -1238,12 +1071,12 @@ public class VirtualMachineMO extends BaseMO {
                 if (option.getKey().equals("RemoteDisplay.vnc.port")) {
                     String value = (String)option.getValue();
                     if (value != null) {
-                        return new Pair<String, Integer>(summary.getHostIp(), Integer.parseInt(value));
+                        return new Pair<>(summary.getHostIp(), Integer.parseInt(value));
                     }
                 }
             }
         }
-        return new Pair<String, Integer>(summary.getHostIp(), 0);
+        return new Pair<>(summary.getHostIp(), 0);
     }
 
     // vmdkDatastorePath: [datastore name] vmdkFilePath
@@ -1254,11 +1087,10 @@ public class VirtualMachineMO extends BaseMO {
     // vmdkDatastorePath: [datastore name] vmdkFilePath
     public void createDisk(String vmdkDatastorePath, VirtualDiskType diskType, VirtualDiskMode diskMode, String rdmDeviceName, long sizeInMb,
                            ManagedObjectReference morDs, int controllerKey, String vSphereStoragePolicyId) throws Exception {
-        logger.trace(String.format("Creating disk in target MOR [%s] with values: vmdkDatastorePath [%s], sizeInMb [%s], diskType [%s], diskMode [%s], rdmDeviceName [%s]"
-                    + ", datastore [%s], controllerKey [%s].", _mor.getValue(), vmdkDatastorePath, sizeInMb, diskType, diskMode, rdmDeviceName, morDs.getValue(), controllerKey));
+        logger.trace("Creating disk in target MOR [{}] with values: vmdkDatastorePath [{}], sizeInMb [{}], diskType [{}], diskMode [{}], rdmDeviceName [{}], datastore [{}], controllerKey [{}].",
+                _mor.getValue(), vmdkDatastorePath, sizeInMb, diskType, diskMode, rdmDeviceName, morDs.getValue(), controllerKey);
 
         assert (vmdkDatastorePath != null);
-        assert (morDs != null);
 
         int ideControllerKey = getIDEDeviceControllerKey();
         if (controllerKey < 0) {
@@ -1270,17 +1102,9 @@ public class VirtualMachineMO extends BaseMO {
 
             VirtualDiskFlatVer2BackingInfo backingInfo = new VirtualDiskFlatVer2BackingInfo();
             backingInfo.setDiskMode(VirtualDiskMode.PERSISTENT.value());
-            if (diskType == VirtualDiskType.THIN) {
-                backingInfo.setThinProvisioned(true);
-            } else {
-                backingInfo.setThinProvisioned(false);
-            }
+            backingInfo.setThinProvisioned(diskType == VirtualDiskType.THIN);
 
-            if (diskType == VirtualDiskType.EAGER_ZEROED_THICK) {
-                backingInfo.setEagerlyScrub(true);
-            } else {
-                backingInfo.setEagerlyScrub(false);
-            }
+            backingInfo.setEagerlyScrub(diskType == VirtualDiskType.EAGER_ZEROED_THICK);
 
             backingInfo.setDatastore(morDs);
             backingInfo.setFileName(vmdkDatastorePath);
@@ -1357,7 +1181,7 @@ public class VirtualMachineMO extends BaseMO {
             if (!currentAdapterType.equalsIgnoreCase(newAdapterType)) {
                 logger.info("Updating adapter type to " + newAdapterType + " for VMDK file " + vmdkFileName);
                 Pair<DatacenterMO, String> dcInfo = getOwnerDatacenter();
-                byte[] newVmdkContent = vmdkFileDescriptor.changeVmdkAdapterType(vmdkInfo.second(), newAdapterType);
+                byte[] newVmdkContent = VmdkFileDescriptor.changeVmdkAdapterType(vmdkInfo.second(), newAdapterType);
                 String vmdkUploadUrl = getContext().composeDatastoreBrowseUrl(dcInfo.first().getName(), vmdkFileName);
                 getContext().uploadResourceContent(vmdkUploadUrl, newVmdkContent);
                 logger.info("Updated VMDK file " + vmdkFileName);
@@ -1384,7 +1208,7 @@ public class VirtualMachineMO extends BaseMO {
                 VmdkAdapterType newAdapterType = VmdkAdapterType.lsilogic;
                 logger.debug("Updating adapter type to " + newAdapterType + " from " + currentAdapterTypeStr + " for VMDK file " + vmdkFileName);
                 Pair<DatacenterMO, String> dcInfo = getOwnerDatacenter();
-                byte[] newVmdkContent = vmdkFileDescriptor.changeVmdkAdapterType(vmdkInfo.second(), newAdapterType.toString());
+                byte[] newVmdkContent = VmdkFileDescriptor.changeVmdkAdapterType(vmdkInfo.second(), newAdapterType.toString());
                 String vmdkUploadUrl = getContext().composeDatastoreBrowseUrl(dcInfo.first().getName(), vmdkFileName);
 
                 getContext().uploadResourceContent(vmdkUploadUrl, newVmdkContent);
@@ -1405,8 +1229,8 @@ public class VirtualMachineMO extends BaseMO {
         if(logger.isTraceEnabled())
             logger.trace("vCenter API trace - attachDisk(). target MOR: " + _mor.getValue() + ", vmdkDatastorePath: "
                             + GSON.toJson(vmdkDatastorePathChain) + ", datastore: " + morDs.getValue());
-        int controllerKey = 0;
-        int unitNumber = 0;
+        int controllerKey;
+        int unitNumber;
 
         if (DiskControllerType.getType(diskController) == DiskControllerType.ide) {
             // IDE virtual disk cannot be added if VM is running
@@ -1465,21 +1289,6 @@ public class VirtualMachineMO extends BaseMO {
 
         if(logger.isTraceEnabled())
             logger.trace("vCenter API trace - attachDisk() done(successfully)");
-    }
-
-    private int getControllerBusNumber(int controllerKey) throws Exception {
-        List<VirtualDevice> devices = (List<VirtualDevice>)_context.getVimClient().
-                getDynamicProperty(_mor, "config.hardware.device");
-
-        if (devices != null && devices.size() > 0) {
-            for (VirtualDevice device : devices) {
-                if (device instanceof VirtualController && device.getKey() == controllerKey) {
-                    return ((VirtualController)device).getBusNumber();
-                }
-            }
-        }
-        throw new Exception("SCSI Controller with key " + controllerKey + " is Not Found");
-
     }
 
     // vmdkDatastorePath: [datastore name] vmdkFilePath
@@ -1585,7 +1394,7 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     private Future<?> answerVmwareQuestion(Boolean[] flags, VirtualMachineMO vmMo, boolean force) {
-        Future<?> future = MonitorServiceExecutor.submit(new Runnable() {
+        return MonitorServiceExecutor.submit(new Runnable() {
             @Override
             public void run() {
                 logger.info("VM Question monitor started...");
@@ -1650,7 +1459,6 @@ public class VirtualMachineMO extends BaseMO {
                 logger.info("VM Question monitor stopped");
             }
         });
-        return future;
     }
     // isoDatastorePath: [datastore name] isoFilePath
     public void attachIso(String isoDatastorePath, ManagedObjectReference morDs, boolean connect, boolean connectAtBoot, boolean forced) throws Exception {
@@ -1791,10 +1599,10 @@ public class VirtualMachineMO extends BaseMO {
         VmdkFileDescriptor descriptor = new VmdkFileDescriptor();
         descriptor.parse(content);
 
-        Pair<VmdkFileDescriptor, byte[]> result = new Pair<VmdkFileDescriptor, byte[]>(descriptor, content);
+        Pair<VmdkFileDescriptor, byte[]> result = new Pair<>(descriptor, content);
+        logger.trace("vCenter API trace - getVmdkFileInfo() done");
         if (logger.isTraceEnabled()) {
-            logger.trace("vCenter API trace - getVmdkFileInfo() done");
-            logger.trace("VMDK file descriptor: " + GSON.toJson(result.first()));
+            logger.trace("VMDK file descriptor: {}", GSON.toJson(result.first()));
         }
         return result;
     }
@@ -1870,7 +1678,7 @@ public class VirtualMachineMO extends BaseMO {
                                 if (logger.isInfoEnabled()) {
                                     logger.info("Download VMDK file for export url: " + deviceUrlStr + ", size: " + diskFileSize);
                                 }
-                                long lengthOfDiskFile = _context.downloadVmdkFile(diskUrlStr, diskLocalPath, totalBytesDownloaded, new ActionDelegate<Long>() {
+                                long lengthOfDiskFile = _context.downloadVmdkFile(diskUrlStr, diskLocalPath, totalBytesDownloaded, new ActionDelegate<>() {
                                     @Override
                                     public void action(Long param) {
                                         if (logger.isTraceEnabled()) {
@@ -1895,7 +1703,7 @@ public class VirtualMachineMO extends BaseMO {
                                 CompletableFuture<Long> future = CompletableFuture.supplyAsync(() -> {
                                     long lengthOfDiskFile = 0;
                                     try {
-                                        lengthOfDiskFile = _context.downloadVmdkFile(diskUrl, diskLocalPath, totalBytesDownloaded, new ActionDelegate<Long>() {
+                                        lengthOfDiskFile = _context.downloadVmdkFile(diskUrl, diskLocalPath, totalBytesDownloaded, new ActionDelegate<>() {
                                             @Override
                                             public void action(Long param) {
                                                 if (logger.isTraceEnabled()) {
@@ -1946,7 +1754,7 @@ public class VirtualMachineMO extends BaseMO {
                         String ovfPath = exportDir + File.separator + exportName + ".ovf";
                         fileNames.add(ovfPath);
 
-                        OutputStreamWriter out = new OutputStreamWriter(new FileOutputStream(ovfPath),"UTF-8");
+                        OutputStreamWriter out = new OutputStreamWriter(new FileOutputStream(ovfPath), StandardCharsets.UTF_8);
                         out.write(ovfCreateDescriptorResult.getOvfDescriptor());
                         out.close();
 
@@ -1968,7 +1776,7 @@ public class VirtualMachineMO extends BaseMO {
                                 }
                             }
 
-                            logger.info("Package OVA with command: " + command.toString());
+                            logger.info("Package OVA with command: {}", command.toString());
                             command.execute();
 
                             // to be safe, physically test existence of the target OVA file
@@ -2017,8 +1825,8 @@ public class VirtualMachineMO extends BaseMO {
 
         boolean replaced = false;
         try {
-            in = new BufferedReader(new InputStreamReader(new ByteArrayInputStream(vmxContent),"UTF-8"));
-            out = new BufferedWriter(new OutputStreamWriter(bos,"UTF-8"));
+            in = new BufferedReader(new InputStreamReader(new ByteArrayInputStream(vmxContent), StandardCharsets.UTF_8));
+            out = new BufferedWriter(new OutputStreamWriter(bos, StandardCharsets.UTF_8));
             String line;
             while ((line = in.readLine()) != null) {
                 if (line.startsWith("workingDir")) {
@@ -2051,70 +1859,6 @@ public class VirtualMachineMO extends BaseMO {
         // redoRegistration();
     }
 
-    // destName does not contain extension name
-    public void backupCurrentSnapshot(String deviceName, ManagedObjectReference morDestDs, String destDsDirectory, String destName, boolean includeBase) throws Exception {
-
-        SnapshotDescriptor descriptor = getSnapshotDescriptor();
-        SnapshotInfo[] snapshotInfo = descriptor.getCurrentDiskChain();
-        if (snapshotInfo.length == 0) {
-            String msg = "No snapshot found in this VM";
-            throw new Exception(msg);
-        }
-
-        HostMO hostMo = getRunningHost();
-        DatacenterMO dcMo = getOwnerDatacenter().first();
-        List<Pair<ManagedObjectReference, String>> mounts = hostMo.getDatastoreMountsOnHost();
-        VirtualMachineFileInfo vmFileInfo = getFileInfo();
-
-        List<Ternary<String, String, String>> backupInfo = new ArrayList<Ternary<String, String, String>>();
-
-        for (int i = 0; i < snapshotInfo.length; i++) {
-            if (!includeBase && i == snapshotInfo.length - 1) {
-                break;
-            }
-
-            SnapshotDescriptor.DiskInfo[] disks = snapshotInfo[i].getDisks();
-            if (disks != null) {
-                String destBaseFileName;
-                String destFileName;
-                String destParentFileName;
-                for (SnapshotDescriptor.DiskInfo disk : disks) {
-                    if (deviceName == null || deviceName.equals(disk.getDeviceName())) {
-                        String srcVmdkFullDsPath = getSnapshotDiskFileDatastorePath(vmFileInfo, mounts, disk.getDiskFileName());
-                        Pair<DatastoreMO, String> srcDsInfo = getOwnerDatastore(srcVmdkFullDsPath);
-
-                        Pair<VmdkFileDescriptor, byte[]> vmdkInfo = getVmdkFileInfo(srcVmdkFullDsPath);
-                        String srcVmdkBaseFilePath = DatastoreFile.getCompanionDatastorePath(srcVmdkFullDsPath, vmdkInfo.first().getBaseFileName());
-
-                        destFileName = destName + (snapshotInfo.length - i - 1) + ".vmdk";
-                        if (vmdkInfo.first().getParentFileName() != null) {
-                            destBaseFileName = destName + (snapshotInfo.length - i - 1) + "-delta.vmdk";
-                            destParentFileName = destName + (snapshotInfo.length - i - 2) + ".vmdk";
-                        } else {
-                            destBaseFileName = destName + (snapshotInfo.length - i - 1) + "-flat.vmdk";
-                            destParentFileName = null;
-                        }
-
-                        logger.info("Copy VMDK base file " + srcVmdkBaseFilePath + " to " + destDsDirectory + "/" + destBaseFileName);
-                        srcDsInfo.first().copyDatastoreFile(srcVmdkBaseFilePath, dcMo.getMor(), morDestDs, destDsDirectory + "/" + destBaseFileName, dcMo.getMor(), true);
-
-                        byte[] newVmdkContent = VmdkFileDescriptor.changeVmdkContentBaseInfo(vmdkInfo.second(), destBaseFileName, destParentFileName);
-                        String vmdkUploadUrl = getContext().composeDatastoreBrowseUrl(dcMo.getName(), destDsDirectory + "/" + destFileName);
-
-                        logger.info("Upload VMDK content file to " + destDsDirectory + "/" + destFileName);
-                        getContext().uploadResourceContent(vmdkUploadUrl, newVmdkContent);
-
-                        backupInfo.add(new Ternary<String, String, String>(destFileName, destBaseFileName, destParentFileName));
-                    }
-                }
-            }
-        }
-
-        byte[] vdiskInfo = VmwareHelper.composeDiskInfo(backupInfo, snapshotInfo.length, includeBase);
-        String vdiskUploadUrl = getContext().composeDatastoreBrowseUrl(dcMo.getName(), destDsDirectory + "/" + destName + ".vdisk");
-        getContext().uploadResourceContent(vdiskUploadUrl, vdiskInfo);
-    }
-
     public String[] getCurrentSnapshotDiskChainDatastorePaths(String diskDevice) throws Exception {
         HostMO hostMo = getRunningHost();
         List<Pair<ManagedObjectReference, String>> mounts = hostMo.getDatastoreMountsOnHost();
@@ -2123,9 +1867,9 @@ public class VirtualMachineMO extends BaseMO {
         SnapshotDescriptor descriptor = getSnapshotDescriptor();
         SnapshotInfo[] snapshotInfo = descriptor.getCurrentDiskChain();
 
-        List<String> diskDsFullPaths = new ArrayList<String>();
-        for (int i = 0; i < snapshotInfo.length; i++) {
-            SnapshotDescriptor.DiskInfo[] disks = snapshotInfo[i].getDisks();
+        List<String> diskDsFullPaths = new ArrayList<>();
+        for (SnapshotInfo info : snapshotInfo) {
+            SnapshotDescriptor.DiskInfo[] disks = info.getDisks();
             if (disks != null) {
                 for (SnapshotDescriptor.DiskInfo disk : disks) {
                     String deviceNameInDisk = disk.getDeviceName();
@@ -2145,7 +1889,7 @@ public class VirtualMachineMO extends BaseMO {
         assert (morDs != null);
         String[] disks = getCurrentSnapshotDiskChainDatastorePaths(diskDevice);
         VirtualMachineMO clonedVm = cloneFromDiskChain(clonedVmName, cpuSpeedMHz, memoryMb, disks, morDs, virtualHardwareVersion);
-        return new Pair<VirtualMachineMO, String[]>(clonedVm, disks);
+        return new Pair<>(clonedVm, disks);
     }
 
     public VirtualMachineMO cloneFromDiskChain(String clonedVmName, int cpuSpeedMHz, int memoryMb, String[] disks, ManagedObjectReference morDs, String cloneHardwareVersion) throws Exception {
@@ -2196,19 +1940,6 @@ public class VirtualMachineMO extends BaseMO {
         return guestOsDescriptor;
     }
 
-    public void plugDevice(VirtualDevice device) throws Exception {
-        logger.debug(LogUtils.logGsonWithoutException("Pluging device [%s] to VM [%s].", device, getVmName()));
-        VirtualMachineConfigSpec vmConfigSpec = new VirtualMachineConfigSpec();
-        VirtualDeviceConfigSpec deviceConfigSpec = new VirtualDeviceConfigSpec();
-        deviceConfigSpec.setDevice(device);
-        deviceConfigSpec.setOperation(VirtualDeviceConfigSpecOperation.ADD);
-
-        vmConfigSpec.getDeviceChange().add(deviceConfigSpec);
-        if (!configureVm(vmConfigSpec)) {
-            throw new Exception("Failed to add devices");
-        }
-    }
-
     public void tearDownDevice(VirtualDevice device) throws Exception {
         VirtualMachineConfigSpec vmConfigSpec = new VirtualMachineConfigSpec();
         VirtualDeviceConfigSpec deviceConfigSpec = new VirtualDeviceConfigSpec();
@@ -2241,40 +1972,8 @@ public class VirtualMachineMO extends BaseMO {
         }
     }
 
-    public void copyAllVmDiskFiles(DatastoreMO destDsMo, String destDsDir, boolean followDiskChain) throws Exception {
-        VirtualDevice[] disks = getAllDiskDevice();
-        DatacenterMO dcMo = getOwnerDatacenter().first();
-        if (disks != null) {
-            for (VirtualDevice disk : disks) {
-                List<Pair<String, ManagedObjectReference>> vmdkFiles = getDiskDatastorePathChain((VirtualDisk)disk, followDiskChain);
-                for (Pair<String, ManagedObjectReference> fileItem : vmdkFiles) {
-                    DatastoreMO srcDsMo = new DatastoreMO(_context, fileItem.second());
-
-                    DatastoreFile srcFile = new DatastoreFile(fileItem.first());
-                    DatastoreFile destFile = new DatastoreFile(destDsMo.getName(), destDsDir, srcFile.getFileName());
-
-                    Pair<VmdkFileDescriptor, byte[]> vmdkDescriptor = null;
-
-                    vmdkDescriptor = getVmdkFileInfo(fileItem.first());
-
-                    logger.info("Copy VM disk file " + srcFile.getPath() + " to " + destFile.getPath());
-                    srcDsMo.copyDatastoreFile(fileItem.first(), dcMo.getMor(), destDsMo.getMor(), destFile.getPath(), dcMo.getMor(), true);
-
-                    if (vmdkDescriptor != null) {
-                        String vmdkBaseFileName = vmdkDescriptor.first().getBaseFileName();
-                        String baseFilePath = srcFile.getCompanionPath(vmdkBaseFileName);
-                        destFile = new DatastoreFile(destDsMo.getName(), destDsDir, vmdkBaseFileName);
-
-                        logger.info("Copy VM disk file " + baseFilePath + " to " + destFile.getPath());
-                        srcDsMo.copyDatastoreFile(baseFilePath, dcMo.getMor(), destDsMo.getMor(), destFile.getPath(), dcMo.getMor(), true);
-                    }
-                }
-            }
-        }
-    }
-
     public List<String> getVmdkFileBaseNames() throws Exception {
-        List<String> vmdkFileBaseNames = new ArrayList<String>();
+        List<String> vmdkFileBaseNames = new ArrayList<>();
         VirtualDevice[] devices = getAllDiskDevice();
         for(VirtualDevice device : devices) {
             if(device instanceof VirtualDisk) {
@@ -2309,7 +2008,7 @@ public class VirtualMachineMO extends BaseMO {
                     DatastoreFile srcFile = new DatastoreFile(fileItem.first());
                     DatastoreFile destFile = new DatastoreFile(destDsMo.getName(), destDsDir, srcFile.getFileName());
 
-                    Pair<VmdkFileDescriptor, byte[]> vmdkDescriptor = null;
+                    Pair<VmdkFileDescriptor, byte[]> vmdkDescriptor;
                     vmdkDescriptor = getVmdkFileInfo(fileItem.first());
 
                     logger.info("Move VM disk file " + srcFile.getPath() + " to " + destFile.getPath());
@@ -2326,37 +2025,6 @@ public class VirtualMachineMO extends BaseMO {
                 }
             }
         }
-    }
-
-    public int getPvScsiDeviceControllerKeyNoException() throws Exception {
-        List<VirtualDevice> devices = (List<VirtualDevice>)_context.getVimClient().
-                getDynamicProperty(_mor, "config.hardware.device");
-
-        if (devices != null && devices.size() > 0) {
-            for (VirtualDevice device : devices) {
-                if (device instanceof ParaVirtualSCSIController) {
-                    return device.getKey();
-                }
-            }
-        }
-
-        return -1;
-    }
-
-    public int getPvScsiDeviceControllerKey() throws Exception {
-        List<VirtualDevice> devices = (List<VirtualDevice>)_context.getVimClient().
-                getDynamicProperty(_mor, "config.hardware.device");
-
-        if (devices != null && devices.size() > 0) {
-            for (VirtualDevice device : devices) {
-                if (device instanceof ParaVirtualSCSIController) {
-                    return device.getKey();
-                }
-            }
-        }
-
-        assert (false);
-        throw new Exception("VMware Paravirtual SCSI Controller Not Found");
     }
 
     protected VirtualSCSIController getScsiController(DiskControllerType type) {
@@ -2442,23 +2110,23 @@ public class VirtualMachineMO extends BaseMO {
 
     // Would be useful if there exists multiple sub types of SCSI controllers per VM are supported in CloudStack f
     public int getScsiDiskControllerKey(String diskController) throws Exception {
-        List<VirtualDevice> devices = (List<VirtualDevice>)_context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
+        List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
         if (CollectionUtils.isNotEmpty(devices)) {
             DiskControllerType diskControllerType = DiskControllerType.getType(diskController);
             for (VirtualDevice device : devices) {
                 if ((diskControllerType == DiskControllerType.lsilogic || diskControllerType == DiskControllerType.scsi)
                         && device instanceof VirtualLsiLogicController && isValidScsiDiskController((VirtualLsiLogicController)device)) {
-                    return ((VirtualLsiLogicController)device).getKey();
+                    return device.getKey();
                 } else if ((diskControllerType == DiskControllerType.lsisas1068 || diskControllerType == DiskControllerType.scsi)
                         && device instanceof VirtualLsiLogicSASController && isValidScsiDiskController((VirtualLsiLogicSASController)device)) {
-                    return ((VirtualLsiLogicSASController)device).getKey();
+                    return device.getKey();
                 } else if ((diskControllerType == DiskControllerType.pvscsi || diskControllerType == DiskControllerType.scsi)
                         && device instanceof ParaVirtualSCSIController && isValidScsiDiskController((ParaVirtualSCSIController)device)) {
-                    return ((ParaVirtualSCSIController)device).getKey();
+                    return device.getKey();
                 } else if ((diskControllerType == DiskControllerType.buslogic || diskControllerType == DiskControllerType.scsi)
                         && device instanceof VirtualBusLogicController && isValidScsiDiskController((VirtualBusLogicController)device)) {
-                    return ((VirtualBusLogicController)device).getKey();
+                    return device.getKey();
                 }
             }
         }
@@ -2468,7 +2136,7 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public int getScsiDiskControllerKeyNoException(String diskController, int scsiUnitNumber) throws Exception {
-        List<VirtualDevice> devices = (List<VirtualDevice>)_context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
+        List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
         if (CollectionUtils.isNotEmpty(devices) && scsiUnitNumber >= 0) {
             int requiredScsiController = scsiUnitNumber / VmwareHelper.MAX_ALLOWED_DEVICES_SCSI_CONTROLLER;
@@ -2478,7 +2146,7 @@ public class VirtualMachineMO extends BaseMO {
                 if ((diskControllerType == DiskControllerType.lsilogic || diskControllerType == DiskControllerType.scsi) && device instanceof VirtualLsiLogicController) {
                     if (scsiControllerDeviceCount == requiredScsiController) {
                         if (isValidScsiDiskController((VirtualLsiLogicController)device)) {
-                            return ((VirtualLsiLogicController)device).getKey();
+                            return device.getKey();
                         }
                         break;
                     }
@@ -2486,7 +2154,7 @@ public class VirtualMachineMO extends BaseMO {
                 } else if ((diskControllerType == DiskControllerType.lsisas1068 || diskControllerType == DiskControllerType.scsi) && device instanceof VirtualLsiLogicSASController) {
                     if (scsiControllerDeviceCount == requiredScsiController) {
                         if (isValidScsiDiskController((VirtualLsiLogicSASController)device)) {
-                            return ((VirtualLsiLogicSASController)device).getKey();
+                            return device.getKey();
                         }
                         break;
                     }
@@ -2494,7 +2162,7 @@ public class VirtualMachineMO extends BaseMO {
                 } else if ((diskControllerType == DiskControllerType.pvscsi || diskControllerType == DiskControllerType.scsi) && device instanceof ParaVirtualSCSIController) {
                     if (scsiControllerDeviceCount == requiredScsiController) {
                         if (isValidScsiDiskController((ParaVirtualSCSIController)device)) {
-                            return ((ParaVirtualSCSIController)device).getKey();
+                            return device.getKey();
                         }
                         break;
                     }
@@ -2502,7 +2170,7 @@ public class VirtualMachineMO extends BaseMO {
                 } else if ((diskControllerType == DiskControllerType.buslogic || diskControllerType == DiskControllerType.scsi) && device instanceof VirtualBusLogicController) {
                     if (scsiControllerDeviceCount == requiredScsiController) {
                         if (isValidScsiDiskController((VirtualBusLogicController)device)) {
-                            return ((VirtualBusLogicController)device).getKey();
+                            return device.getKey();
                         }
                         break;
                     }
@@ -2515,15 +2183,13 @@ public class VirtualMachineMO extends BaseMO {
 
     public int getNextScsiDiskDeviceNumber() throws Exception {
         int scsiControllerKey = getScsiDeviceControllerKey();
-        int deviceNumber = getNextDeviceNumber(scsiControllerKey);
-
-        return deviceNumber;
+        return getNextDeviceNumber(scsiControllerKey);
     }
 
     public int getScsiDeviceControllerKey() throws Exception {
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
-        if (devices != null && devices.size() > 0) {
+        if (CollectionUtils.isNotEmpty(devices)) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualSCSIController && isValidScsiDiskController((VirtualSCSIController)device)) {
                     return device.getKey();
@@ -2538,7 +2204,7 @@ public class VirtualMachineMO extends BaseMO {
     public int getScsiDeviceControllerKeyNoException() throws Exception {
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
-        if (devices != null && devices.size() > 0) {
+        if (CollectionUtils.isNotEmpty(devices)) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualSCSIController && isValidScsiDiskController((VirtualSCSIController)device)) {
                     return device.getKey();
@@ -2576,10 +2242,10 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     private int getLsiLogicDeviceControllerKeyNoException() throws Exception {
-        List<VirtualDevice> devices = (List<VirtualDevice>)_context.getVimClient().
+        List<VirtualDevice> devices = _context.getVimClient().
                 getDynamicProperty(_mor, "config.hardware.device");
 
-        if (devices != null && devices.size() > 0) {
+        if (CollectionUtils.isNotEmpty(devices)) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualLsiLogicController) {
                     return device.getKey();
@@ -2611,32 +2277,6 @@ public class VirtualMachineMO extends BaseMO {
         }
     }
 
-    public void ensureScsiDeviceControllers(int count, int availableBusNum) throws Exception {
-        int scsiControllerKey = getScsiDeviceControllerKeyNoException();
-        if (scsiControllerKey < 0) {
-            VirtualMachineConfigSpec vmConfig = new VirtualMachineConfigSpec();
-
-            int busNum = availableBusNum;
-            while (busNum < count) {
-            VirtualLsiLogicController scsiController = new VirtualLsiLogicController();
-            scsiController.setSharedBus(VirtualSCSISharing.NO_SHARING);
-                scsiController.setBusNumber(busNum);
-                scsiController.setKey(busNum - VmwareHelper.MAX_SCSI_CONTROLLER_COUNT);
-            VirtualDeviceConfigSpec scsiControllerSpec = new VirtualDeviceConfigSpec();
-            scsiControllerSpec.setDevice(scsiController);
-            scsiControllerSpec.setOperation(VirtualDeviceConfigSpecOperation.ADD);
-
-            vmConfig.getDeviceChange().add(scsiControllerSpec);
-                busNum++;
-            }
-            if (configureVm(vmConfig)) {
-                throw new Exception("Unable to add Scsi controllers to the VM " + getName());
-            } else {
-                logger.info("Successfully added " + count + " SCSI controllers.");
-            }
-        }
-    }
-
     private boolean isValidScsiDiskController(VirtualSCSIController scsiDiskController) {
         if (scsiDiskController == null) {
             return false;
@@ -2647,11 +2287,7 @@ public class VirtualMachineMO extends BaseMO {
             return false;
         }
 
-        if (scsiDiskController.getBusNumber() >= VmwareHelper.MAX_SCSI_CONTROLLER_COUNT) {
-            return false;
-        }
-
-        return true;
+        return scsiDiskController.getBusNumber() < VmwareHelper.MAX_SCSI_CONTROLLER_COUNT;
     }
 
     // return pair of VirtualDisk and disk device bus name(ide0:0, etc)
@@ -2669,7 +2305,7 @@ public class VirtualMachineMO extends BaseMO {
 
         logger.info(String.format("Looking for disk device info for volume [%s] with base name [%s].", vmdkDatastorePath, srcBaseName));
 
-        if (devices != null && devices.size() > 0) {
+        if (CollectionUtils.isNotEmpty(devices)) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualDisk) {
                     logger.info(String.format("Testing if disk device with controller key [%s] and unit number [%s] has backing of type VirtualDiskFlatVer2BackingInfo.",
@@ -2753,12 +2389,12 @@ public class VirtualMachineMO extends BaseMO {
             logger.info("Look for disk device info from volume : " + vmdkDatastorePath + " with trimmed base name: " + trimmedSrcBaseName);
         }
 
-        if (devices != null && devices.size() > 0) {
+        if (CollectionUtils.isNotEmpty(devices)) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualDisk) {
                     logger.info("Test against disk device, controller key: " + device.getControllerKey() + ", unit number: " + device.getUnitNumber());
 
-                    VirtualDeviceBackingInfo backingInfo = ((VirtualDisk)device).getBacking();
+                    VirtualDeviceBackingInfo backingInfo = device.getBacking();
                     if (backingInfo instanceof VirtualDiskFlatVer2BackingInfo) {
                         VirtualDiskFlatVer2BackingInfo diskBackingInfo = (VirtualDiskFlatVer2BackingInfo)backingInfo;
                         do {
@@ -2771,14 +2407,14 @@ public class VirtualMachineMO extends BaseMO {
                                     String deviceNumbering = getDeviceBusName(devices, device);
                                     logger.info("Disk backing : " + diskBackingInfo.getFileName() + " matches ==> " + deviceNumbering);
 
-                                    return new Pair<VirtualDisk, String>((VirtualDisk)device, deviceNumbering);
+                                    return new Pair<>((VirtualDisk)device, deviceNumbering);
                                 }
                             } else {
                                 if (backingBaseName.contains(trimmedSrcBaseName)) {
                                     String deviceNumbering = getDeviceBusName(devices, device);
                                     logger.info("Disk backing : " + diskBackingInfo.getFileName() + " matches ==> " + deviceNumbering);
 
-                                    return new Pair<VirtualDisk, String>((VirtualDisk)device, deviceNumbering);
+                                    return new Pair<>((VirtualDisk)device, deviceNumbering);
                                 }
                             }
 
@@ -2794,12 +2430,12 @@ public class VirtualMachineMO extends BaseMO {
 
     public String getDiskCurrentTopBackingFileInChain(String deviceBusName) throws Exception {
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
-        if (devices != null && devices.size() > 0) {
+        if (CollectionUtils.isNotEmpty(devices)) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualDisk) {
                     logger.info("Test against disk device, controller key: " + device.getControllerKey() + ", unit number: " + device.getUnitNumber());
 
-                    VirtualDeviceBackingInfo backingInfo = ((VirtualDisk)device).getBacking();
+                    VirtualDeviceBackingInfo backingInfo = device.getBacking();
                     if (backingInfo instanceof VirtualDiskFlatVer2BackingInfo) {
                         VirtualDiskFlatVer2BackingInfo diskBackingInfo = (VirtualDiskFlatVer2BackingInfo)backingInfo;
 
@@ -2814,31 +2450,15 @@ public class VirtualMachineMO extends BaseMO {
         return null;
     }
 
-    public VirtualDisk getDiskDeviceByDeviceBusName(String deviceBusName) throws Exception {
-        List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
-
-        if (devices != null && devices.size() > 0) {
-            for (VirtualDevice device : devices) {
-                if (device instanceof VirtualDisk) {
-                    String deviceNumbering = getDeviceBusName(devices, device);
-                    if (deviceNumbering.equals(deviceBusName))
-                        return (VirtualDisk)device;
-                }
-            }
-        }
-
-        return null;
-    }
-
     public VirtualMachineDiskInfoBuilder getDiskInfoBuilder() throws Exception {
         VirtualMachineDiskInfoBuilder builder = new VirtualMachineDiskInfoBuilder();
 
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
-        if (devices != null && devices.size() > 0) {
+        if (CollectionUtils.isNotEmpty(devices)) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualDisk) {
-                    VirtualDeviceBackingInfo backingInfo = ((VirtualDisk)device).getBacking();
+                    VirtualDeviceBackingInfo backingInfo = device.getBacking();
                     if (backingInfo instanceof VirtualDiskFlatVer2BackingInfo) {
                         VirtualDiskFlatVer2BackingInfo diskBackingInfo = (VirtualDiskFlatVer2BackingInfo)backingInfo;
                         while (diskBackingInfo != null) {
@@ -2855,16 +2475,16 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public List<Pair<Integer, ManagedObjectReference>> getAllDiskDatastores() throws Exception {
-        List<Pair<Integer, ManagedObjectReference>> disks = new ArrayList<Pair<Integer, ManagedObjectReference>>();
+        List<Pair<Integer, ManagedObjectReference>> disks = new ArrayList<>();
 
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
-        if (devices != null && devices.size() > 0) {
+        if (devices != null && !devices.isEmpty()) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualDisk) {
-                    VirtualDeviceBackingInfo backingInfo = ((VirtualDisk)device).getBacking();
+                    VirtualDeviceBackingInfo backingInfo = device.getBacking();
                     if (backingInfo instanceof VirtualDiskFlatVer2BackingInfo) {
                         VirtualDiskFlatVer2BackingInfo diskBackingInfo = (VirtualDiskFlatVer2BackingInfo)backingInfo;
-                        disks.add(new Pair<Integer, ManagedObjectReference>(new Integer(device.getKey()), diskBackingInfo.getDatastore()));
+                        disks.add(new Pair<>(Integer.valueOf(device.getKey()), diskBackingInfo.getDatastore()));
                     }
                 }
             }
@@ -2881,11 +2501,11 @@ public class VirtualMachineMO extends BaseMO {
             throw new Exception("Unsupported VirtualDeviceBackingInfo");
         }
 
-        List<Pair<String, ManagedObjectReference>> pathList = new ArrayList<Pair<String, ManagedObjectReference>>();
+        List<Pair<String, ManagedObjectReference>> pathList = new ArrayList<>();
         VirtualDiskFlatVer2BackingInfo diskBackingInfo = (VirtualDiskFlatVer2BackingInfo)backingInfo;
 
         if (!followChain) {
-            pathList.add(new Pair<String, ManagedObjectReference>(diskBackingInfo.getFileName(), diskBackingInfo.getDatastore()));
+            pathList.add(new Pair<>(diskBackingInfo.getFileName(), diskBackingInfo.getDatastore()));
             return pathList;
         }
 
@@ -2896,11 +2516,11 @@ public class VirtualMachineMO extends BaseMO {
 
         do {
             if (diskBackingInfo.getParent() != null) {
-                pathList.add(new Pair<String, ManagedObjectReference>(diskBackingInfo.getFileName(), diskBackingInfo.getDatastore()));
+                pathList.add(new Pair<>(diskBackingInfo.getFileName(), diskBackingInfo.getDatastore()));
                 diskBackingInfo = diskBackingInfo.getParent();
             } else {
                 // try getting parent info from VMDK file itself
-                byte[] content = null;
+                byte[] content;
                 try {
                     String url = getContext().composeDatastoreBrowseUrl(dcPair.second(), diskBackingInfo.getFileName());
                     content = getContext().getResourceContent(url);
@@ -2908,7 +2528,7 @@ public class VirtualMachineMO extends BaseMO {
                         break;
                     }
 
-                    pathList.add(new Pair<String, ManagedObjectReference>(diskBackingInfo.getFileName(), diskBackingInfo.getDatastore()));
+                    pathList.add(new Pair<>(diskBackingInfo.getFileName(), diskBackingInfo.getDatastore()));
                 } catch (Exception e) {
                     // if snapshot directory has been changed to place other than default. VMware has a bug
                     // that its corresponding disk backing info is not updated correctly. therefore, we will try search
@@ -2922,7 +2542,7 @@ public class VirtualMachineMO extends BaseMO {
                         break;
                     }
 
-                    pathList.add(new Pair<String, ManagedObjectReference>(vmdkFullDsPath, diskBackingInfo.getDatastore()));
+                    pathList.add(new Pair<>(vmdkFullDsPath, diskBackingInfo.getDatastore()));
                 }
 
                 VmdkFileDescriptor descriptor = new VmdkFileDescriptor();
@@ -2966,7 +2586,7 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public List<VirtualDisk> getVirtualDisks() throws Exception {
-        List<VirtualDisk> virtualDisks = new ArrayList<VirtualDisk>();
+        List<VirtualDisk> virtualDisks = new ArrayList<>();
 
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
@@ -2981,7 +2601,7 @@ public class VirtualMachineMO extends BaseMO {
 
     public List<VirtualDisk> getVirtualDisksOrderedByKey() throws Exception {
         List<VirtualDisk> virtualDisks = getVirtualDisks();
-        Collections.sort(virtualDisks, new Comparator<VirtualDisk>() {
+        Collections.sort(virtualDisks, new Comparator<>() {
             @Override
             public int compare(VirtualDisk disk1, VirtualDisk disk2) {
                 Integer disk1Key = disk1.getKey();
@@ -2997,7 +2617,7 @@ public class VirtualMachineMO extends BaseMO {
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
         VirtualMachineConfigSpec reConfigSpec = new VirtualMachineConfigSpec();
-        List<String> detachedDiskFiles = new ArrayList<String>();
+        List<String> detachedDiskFiles = new ArrayList<>();
 
         for (VirtualDevice device : devices) {
             if (device instanceof VirtualDisk) {
@@ -3008,9 +2628,7 @@ public class VirtualMachineMO extends BaseMO {
                 DatastoreFile dsBackingFile = new DatastoreFile(diskBackingInfo.getFileName());
                 String backingBaseName = dsBackingFile.getFileBaseName();
                 String deviceNumbering = getDeviceBusName(devices, device);
-                if (backingBaseName.equalsIgnoreCase(vmdkBaseName) || (deviceBusName != null && deviceBusName.equals(deviceNumbering))) {
-                    continue;
-                } else {
+                if (! (backingBaseName.equalsIgnoreCase(vmdkBaseName) || (deviceBusName != null && deviceBusName.equals(deviceNumbering)))) {
                     logger.info("Detach " + diskBackingInfo.getFileName() + " from " + getName());
 
                     detachedDiskFiles.add(diskBackingInfo.getFileName());
@@ -3023,7 +2641,7 @@ public class VirtualMachineMO extends BaseMO {
             }
         }
 
-        if (detachedDiskFiles.size() > 0) {
+        if (!detachedDiskFiles.isEmpty()) {
             ManagedObjectReference morTask = _context.getService().reconfigVMTask(_mor, reConfigSpec);
             boolean result = _context.getVimClient().waitForTask(morTask);
             if (result) {
@@ -3042,9 +2660,9 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public VirtualDisk[] getAllDiskDevice() throws Exception {
-        List<VirtualDisk> deviceList = new ArrayList<VirtualDisk>();
+        List<VirtualDisk> deviceList = new ArrayList<>();
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
-        if (devices != null && devices.size() > 0) {
+        if (devices != null && !devices.isEmpty()) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualDisk) {
                     deviceList.add((VirtualDisk)device);
@@ -3069,26 +2687,24 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public VirtualDisk[] getAllIndependentDiskDevice() throws Exception {
-        List<VirtualDisk> independentDisks = new ArrayList<VirtualDisk>();
+        List<VirtualDisk> independentDisks = new ArrayList<>();
         VirtualDisk[] allDisks = getAllDiskDevice();
-        if (allDisks.length > 0) {
-            for (VirtualDisk disk : allDisks) {
-                String diskMode = "";
-                if (disk.getBacking() instanceof VirtualDiskFlatVer1BackingInfo) {
-                    diskMode = ((VirtualDiskFlatVer1BackingInfo)disk.getBacking()).getDiskMode();
-                } else if (disk.getBacking() instanceof VirtualDiskFlatVer2BackingInfo) {
-                    diskMode = ((VirtualDiskFlatVer2BackingInfo)disk.getBacking()).getDiskMode();
-                } else if (disk.getBacking() instanceof VirtualDiskRawDiskMappingVer1BackingInfo) {
-                    diskMode = ((VirtualDiskRawDiskMappingVer1BackingInfo)disk.getBacking()).getDiskMode();
-                } else if (disk.getBacking() instanceof VirtualDiskSparseVer1BackingInfo) {
-                    diskMode = ((VirtualDiskSparseVer1BackingInfo)disk.getBacking()).getDiskMode();
-                } else if (disk.getBacking() instanceof VirtualDiskSparseVer2BackingInfo) {
-                    diskMode = ((VirtualDiskSparseVer2BackingInfo)disk.getBacking()).getDiskMode();
-                }
+        for (VirtualDisk disk : allDisks) {
+            String diskMode = "";
+            if (disk.getBacking() instanceof VirtualDiskFlatVer1BackingInfo) {
+                diskMode = ((VirtualDiskFlatVer1BackingInfo) disk.getBacking()).getDiskMode();
+            } else if (disk.getBacking() instanceof VirtualDiskFlatVer2BackingInfo) {
+                diskMode = ((VirtualDiskFlatVer2BackingInfo) disk.getBacking()).getDiskMode();
+            } else if (disk.getBacking() instanceof VirtualDiskRawDiskMappingVer1BackingInfo) {
+                diskMode = ((VirtualDiskRawDiskMappingVer1BackingInfo) disk.getBacking()).getDiskMode();
+            } else if (disk.getBacking() instanceof VirtualDiskSparseVer1BackingInfo) {
+                diskMode = ((VirtualDiskSparseVer1BackingInfo) disk.getBacking()).getDiskMode();
+            } else if (disk.getBacking() instanceof VirtualDiskSparseVer2BackingInfo) {
+                diskMode = ((VirtualDiskSparseVer2BackingInfo) disk.getBacking()).getDiskMode();
+            }
 
-                if (diskMode.indexOf("independent") != -1) {
-                    independentDisks.add(disk);
-                }
+            if (diskMode.contains("independent")) {
+                independentDisks.add(disk);
             }
         }
 
@@ -3098,10 +2714,10 @@ public class VirtualMachineMO extends BaseMO {
     public int tryGetIDEDeviceControllerKey() throws Exception {
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
-        if (devices != null && devices.size() > 0) {
+        if (devices != null && !devices.isEmpty()) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualIDEController) {
-                    return ((VirtualIDEController)device).getKey();
+                    return device.getKey();
                 }
             }
         }
@@ -3112,10 +2728,10 @@ public class VirtualMachineMO extends BaseMO {
     public int getIDEDeviceControllerKey() throws Exception {
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
-        if (devices != null && devices.size() > 0) {
+        if (devices != null && !devices.isEmpty()) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualIDEController) {
-                    return ((VirtualIDEController)device).getKey();
+                    return device.getKey();
                 }
             }
         }
@@ -3125,17 +2741,17 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public int getIDEControllerKey(int ideUnitNumber) throws Exception {
-        List<VirtualDevice> devices = (List<VirtualDevice>)_context.getVimClient().
+        List<VirtualDevice> devices = _context.getVimClient().
             getDynamicProperty(_mor, "config.hardware.device");
 
         int requiredIdeController = ideUnitNumber / VmwareHelper.MAX_IDE_CONTROLLER_COUNT;
 
         int ideControllerCount = 0;
-        if(devices != null && devices.size() > 0) {
+        if(devices != null && !devices.isEmpty()) {
             for(VirtualDevice device : devices) {
                 if(device instanceof VirtualIDEController) {
                     if (ideControllerCount == requiredIdeController) {
-                        return ((VirtualIDEController)device).getKey();
+                        return device.getKey();
                     }
                     ideControllerCount++;
                 }
@@ -3148,10 +2764,10 @@ public class VirtualMachineMO extends BaseMO {
 
     public int getNumberOfIDEDevices() throws Exception {
         int ideDeviceCount = 0;
-        List<VirtualDevice> devices = (List<VirtualDevice>)_context.getVimClient().
+        List<VirtualDevice> devices = _context.getVimClient().
                 getDynamicProperty(_mor, "config.hardware.device");
 
-        if (devices != null && devices.size() > 0) {
+        if (devices != null && !devices.isEmpty()) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualIDEController) {
                     ideDeviceCount += ((VirtualIDEController)device).getDevice().size();
@@ -3163,7 +2779,7 @@ public class VirtualMachineMO extends BaseMO {
 
     public int getFreeUnitNumberOnIDEController(int controllerKey) throws Exception {
         int freeUnitNumber = 0;
-        List<VirtualDevice> devices = (List<VirtualDevice>)_context.getVimClient().
+        List<VirtualDevice> devices = _context.getVimClient().
                 getDynamicProperty(_mor, "config.hardware.device");
 
         int deviceCount = 0;
@@ -3195,7 +2811,7 @@ public class VirtualMachineMO extends BaseMO {
 
     public VirtualDevice getIsoDevice() throws Exception {
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
-        if (devices != null && devices.size() > 0) {
+        if (devices != null && !devices.isEmpty()) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualCdrom) {
                     return device;
@@ -3215,7 +2831,7 @@ public class VirtualMachineMO extends BaseMO {
 
     public VirtualDevice getIsoDevice(int key) throws Exception {
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
-        if (devices != null && devices.size() > 0) {
+        if (devices != null && !devices.isEmpty()) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualCdrom && device.getKey() == key) {
                     return device;
@@ -3226,9 +2842,9 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public VirtualDevice getIsoDevice(String filename) throws Exception {
-        List<VirtualDevice> devices = (List<VirtualDevice>)_context.getVimClient().
+        List<VirtualDevice> devices = _context.getVimClient().
                 getDynamicProperty(_mor, "config.hardware.device");
-        if(devices != null && devices.size() > 0) {
+        if(devices != null && !devices.isEmpty()) {
             long isoDevices = devices.stream()
                     .filter(x -> x instanceof VirtualCdrom && x.getBacking() instanceof VirtualCdromIsoBackingInfo)
                     .count();
@@ -3250,10 +2866,10 @@ public class VirtualMachineMO extends BaseMO {
     public int getNextDeviceNumber(int controllerKey) throws Exception {
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
-        List<Integer> existingUnitNumbers = new ArrayList<Integer>();
+        List<Integer> existingUnitNumbers = new ArrayList<>();
         int deviceNumber = 0;
         int scsiControllerKey = getScsiDeviceControllerKeyNoException();
-        if (devices != null && devices.size() > 0) {
+        if (devices != null && !devices.isEmpty()) {
             for (VirtualDevice device : devices) {
                 if (device.getControllerKey() != null && device.getControllerKey().intValue() == controllerKey) {
                     existingUnitNumbers.add(device.getUnitNumber());
@@ -3274,7 +2890,7 @@ public class VirtualMachineMO extends BaseMO {
     private List<VirtualDevice> getNicDevices(boolean sorted) throws Exception {
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
-        List<VirtualDevice> nics = new ArrayList<VirtualDevice>();
+        List<VirtualDevice> nics = new ArrayList<>();
         if (devices != null) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualEthernetCard) {
@@ -3284,7 +2900,7 @@ public class VirtualMachineMO extends BaseMO {
         }
 
         if (sorted) {
-            Collections.sort(nics, new Comparator<VirtualDevice>() {
+            Collections.sort(nics, new Comparator<>() {
                 @Override
                 public int compare(VirtualDevice arg0, VirtualDevice arg1) {
                     int unitNumber0 = arg0.getUnitNumber() != null ? arg0.getUnitNumber().intValue() : -1;
@@ -3326,19 +2942,19 @@ public class VirtualMachineMO extends BaseMO {
         String attachedNetworkSummary;
         String dvPortGroupName;
         for (VirtualDevice nic : nics) {
-            attachedNetworkSummary = ((VirtualEthernetCard)nic).getDeviceInfo().getSummary();
+            attachedNetworkSummary = nic.getDeviceInfo().getSummary();
             if (attachedNetworkSummary.startsWith(networkNamePrefix)) {
-                return new Pair<Integer, VirtualDevice>(new Integer(index), nic);
+                return new Pair<>(index, nic);
             } else if (attachedNetworkSummary.endsWith("DistributedVirtualPortBackingInfo.summary") || attachedNetworkSummary.startsWith("DVSwitch")) {
                 dvPortGroupName = getDvPortGroupName((VirtualEthernetCard)nic);
                 if (dvPortGroupName != null && dvPortGroupName.startsWith(networkNamePrefix)) {
                     logger.debug("Found a dvPortGroup already associated with public NIC.");
-                    return new Pair<Integer, VirtualDevice>(new Integer(index), nic);
+                    return new Pair<>(index, nic);
                 }
             }
             index++;
         }
-        return new Pair<Integer, VirtualDevice>(new Integer(-1), null);
+        return new Pair<>(Integer.valueOf(-1), null);
     }
 
     public String getDvPortGroupName(VirtualEthernetCard nic) throws Exception {
@@ -3348,13 +2964,13 @@ public class VirtualMachineMO extends BaseMO {
         ManagedObjectReference dvPortGroupMor = new ManagedObjectReference();
         dvPortGroupMor.setValue(dvPortGroupKey);
         dvPortGroupMor.setType("DistributedVirtualPortgroup");
-        return (String)_context.getVimClient().getDynamicProperty(dvPortGroupMor, "name");
+        return _context.getVimClient().getDynamicProperty(dvPortGroupMor, "name");
     }
 
     public VirtualDevice[] getMatchedDevices(Class<?>[] deviceClasses) throws Exception {
         assert (deviceClasses != null);
 
-        List<VirtualDevice> returnList = new ArrayList<VirtualDevice>();
+        List<VirtualDevice> returnList = new ArrayList<>();
 
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
@@ -3500,14 +3116,14 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public long getHotAddMemoryIncrementSizeInMb() throws Exception {
-        return (Long)_context.getVimClient().getDynamicProperty(_mor, "config.hotPlugMemoryIncrementSize");
+        return _context.getVimClient().getDynamicProperty(_mor, "config.hotPlugMemoryIncrementSize");
     }
 
     public long getHotAddMemoryLimitInMb() throws Exception {
-        return (Long)_context.getVimClient().getDynamicProperty(_mor, "config.hotPlugMemoryLimit");
+        return _context.getVimClient().getDynamicProperty(_mor, "config.hotPlugMemoryLimit");
     }
     public String getGuestId() throws Exception {
-        return (String)_context.getVimClient().getDynamicProperty(_mor, "config.guestId");
+        return _context.getVimClient().getDynamicProperty(_mor, "config.guestId");
     }
 
     public int getCoresPerSocket() throws Exception {
@@ -3516,7 +3132,7 @@ public class VirtualMachineMO extends BaseMO {
         if (apiVersion.compareTo("5.0") < 0) {
             return 1;
         }
-        Integer coresPerSocket = (Integer)_context.getVimClient().getDynamicProperty(_mor, "config.hardware.numCoresPerSocket");
+        Integer coresPerSocket = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.numCoresPerSocket");
         return coresPerSocket != null ? coresPerSocket : 1;
     }
 
@@ -3623,10 +3239,10 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     private int getLsiLogicSasDeviceControllerKeyNoException() throws Exception {
-        List<VirtualDevice> devices = (List<VirtualDevice>)_context.getVimClient().
+        List<VirtualDevice> devices = _context.getVimClient().
                 getDynamicProperty(_mor, "config.hardware.device");
 
-        if (devices != null && devices.size() > 0) {
+        if (devices != null && !devices.isEmpty()) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualLsiLogicSASController) {
                     return device.getKey();
@@ -3666,10 +3282,10 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     private int getBusLogicDeviceControllerKeyNoException() throws Exception {
-        List<VirtualDevice> devices = (List<VirtualDevice>)_context.getVimClient().
+        List<VirtualDevice> devices = _context.getVimClient().
                 getDynamicProperty(_mor, "config.hardware.device");
 
-        if (devices != null && devices.size() > 0) {
+        if (devices != null && !devices.isEmpty()) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualBusLogicController) {
                     return device.getKey();
@@ -3681,13 +3297,13 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public Ternary<Integer, Integer, DiskControllerType> getScsiControllerInfo() throws Exception {
-        List<VirtualDevice> devices = (List<VirtualDevice>)_context.getVimClient().
+        List<VirtualDevice> devices = _context.getVimClient().
                 getDynamicProperty(_mor, "config.hardware.device");
 
         int scsiControllerCount = 0;
         int busNum = -1;
         DiskControllerType controllerType = DiskControllerType.lsilogic;
-        if (devices != null && devices.size() > 0) {
+        if (devices != null && !devices.isEmpty()) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualSCSIController) {
                     scsiControllerCount++;
@@ -3708,16 +3324,16 @@ public class VirtualMachineMO extends BaseMO {
             }
         }
 
-        return new Ternary<Integer, Integer, DiskControllerType>(scsiControllerCount, busNum, controllerType);
+        return new Ternary<>(scsiControllerCount, busNum, controllerType);
     }
 
     public int getNumberOfVirtualDisks() throws Exception {
-        List<VirtualDevice> devices = (List<VirtualDevice>)_context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
+        List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
         logger.info("Counting disk devices attached to VM " + getVmName());
         int count = 0;
 
-        if (devices != null && devices.size() > 0) {
+        if (devices != null && !devices.isEmpty()) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualDisk) {
                     count++;
@@ -3728,7 +3344,7 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public String getExternalDiskUUID(String datastoreVolumePath) throws Exception{
-        List<VirtualDevice> devices = (List<VirtualDevice>)_context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
+        List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
         if (CollectionUtils.isEmpty(devices) || datastoreVolumePath == null) {
             return null;
         }
@@ -3800,7 +3416,7 @@ public class VirtualMachineMO extends BaseMO {
 
         int vmTasks = 0, vmPendingTasks = 0;
         for (ManagedObjectReference task : tasks) {
-            TaskInfo info = (TaskInfo) (_context.getVimClient().getDynamicProperty(task, "info"));
+            TaskInfo info = _context.getVimClient().getDynamicProperty(task, "info");
             if (info.getEntityName().equals(vmName)) {
                 vmTasks++;
                 if (!(info.getState().equals(TaskInfoState.SUCCESS) || info.getState().equals(TaskInfoState.ERROR))) {
@@ -3837,7 +3453,7 @@ public class VirtualMachineMO extends BaseMO {
             if (content == null || content.length == 0) {
                 break;
             }
-            byte[] newVmdkContent = vmdkFileDescriptor.removeChangeTrackPath(content);
+            byte[] newVmdkContent = VmdkFileDescriptor.removeChangeTrackPath(content);
 
             Pair<DatacenterMO, String> dcPair = getOwnerDatacenter();
             String vmdkUrl = getContext().composeDatastoreBrowseUrl(dcPair.second(), diskBackingInfo.getFileName());
